# aact-kit

./: .gitattributes  .gitignore  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/aact_kit/: __init__.py  aggregate.py  location.py  schema.py  tables.py
tests/: conftest.py  test_aggregate.py  test_location.py  test_schema.py  test_tables.py
